RESOLVED FIXED56357
about:blank fake responses don't get serialized when sent the UIProcess
https://bugs.webkit.org/show_bug.cgi?id=56357
Summary about:blank fake responses don't get serialized when sent the UIProcess
Sam Weinig
Reported 2011-03-14 20:04:40 PDT
about:blank fake responses don't get serialized when sent the UIProcess
Attachments
Patch (2.33 KB, patch)
2011-03-14 20:06 PDT, Sam Weinig
aroben: review+
With test. (11.63 KB, patch)
2011-03-14 20:48 PDT, Sam Weinig
aroben: review+
Sam Weinig
Comment 1 2011-03-14 20:06:40 PDT
Sam Weinig
Comment 2 2011-03-14 20:07:34 PDT
Adam Roben (:aroben)
Comment 3 2011-03-14 20:13:35 PDT
Comment on attachment 85763 [details] Patch Can you write an API test? I'll bet you can!
Sam Weinig
Comment 4 2011-03-14 20:48:28 PDT
Created attachment 85766 [details] With test.
Adam Roben (:aroben)
Comment 5 2011-03-14 20:53:18 PDT
Comment on attachment 85766 [details] With test. View in context: https://bugs.webkit.org/attachment.cgi?id=85766&action=review > Tools/TestWebKitAPI/PlatformUtilities.h:46 > +WKStringRef copyMIMETypeForWKURLResponse(WKURLResponseRef); WKRetainPtr? > Tools/TestWebKitAPI/Tests/WebKit2/AboutBlankLoad.cpp:37 > +static void decidePolicyForResponse(WKPageRef page, WKFrameRef frame, WKURLResponseRef response, WKURLRequestRef request, WKFramePolicyListenerRef listener, WKTypeRef userData, const void* clientInfo) Could remove unused arguments. > Tools/TestWebKitAPI/Tests/WebKit2/AboutBlankLoad.cpp:39 > + WKRetainPtr<WKStringRef> MIMEType(AdoptWK, Util::copyMIMETypeForWKURLResponse(response)); You don't like Util::adoptWK. > Tools/TestWebKitAPI/Tests/WebKit2/AboutBlankLoad.cpp:54 > + policyClient.version = 0; NOT NEEDED! > Tools/TestWebKitAPI/win/PlatformUtilitiesWin.cpp:82 > + RetainPtr<CFURLResponseRef> response(AdoptNS, WKURLResponseCopyCFURLResponse(0, wkResponse)); AdoptCF please.
Build Bot
Comment 6 2011-03-14 21:19:39 PDT
Sam Weinig
Comment 7 2011-03-14 23:22:05 PDT
Landed in r81116.
Note You need to log in before you can comment on or make changes to this bug.