about:blank fake responses don't get serialized when sent the UIProcess <rdar://problem/9108119> https://bugs.webkit.org/show_bug.cgi?id=56357

Source/WebCore:

Reviewed by Adam Roben

Test: AboutBlankLoad

* platform/network/cf/ResourceResponse.h:
* platform/network/cf/ResourceResponseCFNet.cpp:
(WebCore::ResourceResponse::cfURLResponse):
Create a CFURLResponseRef if one does not exist yet as we do for
NSURLResponses on the mac.

Tools:

Reviewed by Adam Roben.

* TestWebKitAPI/Tests/WebKit2/AboutBlankLoad.cpp: Added.
(TestWebKitAPI::decidePolicyForResponse):
(TestWebKitAPI::TEST):
Add test that loads of about:blank have a response with a MIMEType of text/html.

* TestWebKitAPI/PlatformUtilities.h:
* TestWebKitAPI/mac/PlatformUtilitiesMac.mm:
(TestWebKitAPI::Util::MIMETypeForWKURLResponse):
* TestWebKitAPI/win/PlatformUtilitiesWin.cpp:
(TestWebKitAPI::Util::MIMETypeForWKURLResponse):
Add helper to get the MIMEType from a WKURLResponse.

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/win/TestWebKitAPI.vcproj:
Add new files.



Canonical link: https://commits.webkit.org/70996@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@81116 268f45cc-cd09-0410-ab3c-d52691b4dbfc